updated working directories to be from root

--- a/rpi-stretch-miniconda3-neopixel/Dockerfile
+++ b/rpi-stretch-miniconda3-neopixel/Dockerfile
@@ -25,6 +25,7 @@ RUN python3 setup.py build
 RUN python3 setup.py install
 
 # Install miniconda to /miniconda
+RUN cd ~
 RUN curl -LO http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-armv7l.sh
 RUN bash Miniconda3-latest-Linux-armv7l.sh -p /miniconda -b
 RUN rm Miniconda3-latest-Linux-armv7l.sh
@@ -32,6 +33,10 @@ ENV PATH=/miniconda/bin:${PATH}
 RUN conda update -y conda
 
 # build numpy from source - This is required for latest TensorFlow!
+RUN cd ~
 RUN git clone https://github.com/numpy/numpy.git numpy
 RUN cd numpy; git checkout v1.14.2
 RUN cd numpy; python3 setup.py install --user
+
+# return to home directory
+RUN cd ~
